<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sieve</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add Entry</string>
    <string name="menu_delete">Delete</string>
    <string name="pref_title">Settings</string>
    <string name="pref_summary">Loliunno</string>
    <string name="main_service_started">relebadMemory</string>
    <string name="service_error_cantconnect">Unable to connect to the Service, force quit the app and try again</string>
    <string name="title_activity_pwlist">Your Passwords</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_entry">Add new Password</string>
    <string name="title_activity_short_login">Sieve</string>
    <string name="title_activity_welcome">Welcome!</string>
    <string name="title_activity_pin">Enter PIN</string>
    <string name="title_activity_file_select">Select File:</string>
    <string name="addentry_confirm_delete">Are you sure you want to delete this entry?</string>
    <string name="settings_confirm_delete">This will delete the entire database</string>
    <string name="settings_confirm_restore">This will replace the current database</string>
    <string name="settings_confirm_backup">This will save the database to the SD card</string>
    <string name="settings_confirm_netrestore">This will replace the database and query the server for a backup</string>
    <string name="settings_confirm_netbackup">This will save the database to the server</string>
    <string name="settings_error_cantchangepin">Unable to change pin. Please restart app and try again</string>
    <string name="settings_error_dbempty">Database is empty</string>
    <string name="settings_error_cantread">Unable to process file</string>
    <string name="text_view_add_service">Service:</string>
    <string name="text_view_add_username">Username:</string>
    <string name="text_view_add_password">Password:</string>
    <string name="text_view_add_email">Email:</string>
    <string name="text_view_add_password_again">Password Again:</string>
    <string name="button_add_save">Save</string>
    <string name="button_add_cancel">Cancel</string>
    <string name="button_submit">Submit</string>
    <string name="text_view_pwlist_prompt">Press the \'add\' button to enter your passwords</string>
    <string name="text_view_short_prompt">Enter your pin</string>
    <string name="text_view_entry_prompt">Enter your data here</string>
    <string name="text_view_password">Password</string>
    <string name="text_view_password_again">Password Again</string>
    <string name="text_view_welcome_message">This password will be used to access your saved passwords, DO NOT FORGET IT as it cannot be recovered!</string>
    <string name="text_view_pin_message">This PIN will be required when you come back for a password</string>
    <string name="text_view_pin_standard">Dont just go picking 0000!</string>
    <string name="text_view_pin_notstandard">No letters!</string>
    <string name="text_view_pin_tooshort">must be 4 digits long</string>
    <string name="text_view_pin_dontmatch">PINs dont match!</string>
    <string name="text_view_pin_notold">Current PIN incorrect</string>
    <string name="text_view_password_notstandard">Password cannot contain special characters</string>
    <string name="text_view_password_standard">Password must include alpha-numeric digits / Capital letters and be at least 16 characters long</string>
    <string name="text_view_password_tooshort">Password is too short! (must be 16 characters long)</string>
    <string name="text_view_password_dontmatch">Passwords do not Match!</string>
    <string name="text_view_settings_sd">Backup to SD card</string>
    <string name="text_view_settings_net">Backup to Net</string>
    <string name="text_view_settings_netrestore">Restore from Net</string>
    <string name="text_view_settings_restore">Restore from SD card</string>
    <string name="text_view_settings_delete">Delete Passwords</string>
    <string name="text_view_settings_pinchange">Change Pin</string>
    <string name="file_select_prompt">Please select a file</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Enter Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
