<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/text_view_add_service" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_view_add_service" android:layout_alignBaseline="@+id/addentry_edittext_service" android:layout_alignBottom="@+id/addentry_edittext_service" android:layout_alignParentLeft="true" />
    <EditText android:id="@+id/addentry_edittext_service" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:ems="10" android:layout_alignParentRight="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
    <EditText android:id="@+id/addentry_edittext_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:ems="10" android:layout_below="@+id/addentry_edittext_service" android:layout_alignParentRight="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
    <TextView android:id="@+id/text_view_add_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_view_add_username" android:layout_alignBottom="@+id/addentry_edittext_username" android:layout_alignParentLeft="true" />
    <EditText android:id="@+id/addentry_edittext_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:ems="10" android:layout_below="@+id/addentry_edittext_username" android:layout_alignParentRight="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberPassword|phone|date" />
    <TextView android:id="@+id/text_view_add_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_view_add_email" android:layout_alignBottom="@+id/addentry_edittext_email" android:layout_alignParentLeft="true" />
    <EditText android:id="@+id/addentry_edittext_passwordagain" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:ems="10" android:layout_below="@+id/addentry_edittext_password" android:layout_alignParentRight="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
    <TextView android:id="@+id/text_view_add_password_again" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_view_add_password_again" android:layout_alignBottom="@+id/addentry_edittext_passwordagain" android:layout_alignParentLeft="true" />
    <TextView android:id="@+id/text_view_add_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_view_add_password" android:layout_alignBottom="@+id/addentry_edittext_password" android:layout_alignParentLeft="true" />
    <EditText android:id="@+id/addentry_edittext_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:ems="10" android:layout_below="@+id/addentry_edittext_email" android:layout_alignParentRight="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
    <Button android:id="@+id/addentry_button_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_add_save" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:onClick="save" />
    <Button android:id="@+id/addentry_button_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_add_cancel" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:onClick="cancel" />
    <TextView android:id="@+id/addentry_textview_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_view_entry_prompt" android:layout_above="@+id/button_add_cancel" android:layout_centerHorizontal="true" />
</RelativeLayout>
