<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <EditText android:id="@+id/pinentry_edittext_pin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70dp" android:ems="10" android:maxLength="4" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:inputType="textUri|textEmailSubject|textLongMessage|textPostalAddress|textVisiblePassword|textFilter|textWebEmailAddress|number|numberSigned|numberDecimal|numberPassword|phone|date" />
    <EditText android:id="@+id/pinentry_edittext_pinagain" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:ems="10" android:maxLength="4" android:layout_below="@+id/pinentry_edittext_pin" android:layout_alignParentRight="true" android:inputType="textUri|textEmailSubject|textLongMessage|textPostalAddress|textVisiblePassword|textFilter|textWebEmailAddress|number|numberSigned|numberDecimal|numberPassword|phone|date" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:id="@+id/text_view_pin_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="PIN" android:layout_alignBaseline="@+id/pinentry_edittext_pin" android:layout_alignBottom="@+id/pinentry_edittext_pin" android:layout_alignParentLeft="true" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:id="@+id/text_view_pin_password_again" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="PIN" android:layout_alignBaseline="@+id/pinentry_edittext_pinagain" android:layout_alignBottom="@+id/pinentry_edittext_pinagain" android:layout_alignParentLeft="true" />
    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_view_pin_message" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <Button android:id="@+id/button_pin_submit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_submit" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="submit" />
    <TextView android:id="@+id/pinentry_textview_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_view_pin_standard" android:layout_above="@+id/button_pin_submit" android:layout_centerHorizontal="true" />
    <EditText android:id="@+id/pinentry_edittext_pinold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:ems="10" android:layout_below="@+id/pinentry_edittext_pinagain" android:layout_alignParentRight="true" android:inputType="textUri|textEmailSubject|textLongMessage|textPostalAddress|textVisiblePassword|textFilter|textWebEmailAddress|number|numberSigned|numberDecimal|numberPassword|phone|date" />
    <TextView android:id="@+id/text_view_pin_password_old" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="PIN(old)" android:layout_alignBaseline="@+id/pinentry_edittext_pinold" android:layout_alignBottom="@+id/pinentry_edittext_pinold" android:layout_alignParentLeft="true" />
</RelativeLayout>
